fix spacing

--- a/query-connector/src/app/query/components/header/header.module.css
+++ b/query-connector/src/app/query/components/header/header.module.css
@@ -62,4 +62,5 @@
   margin: 0 !important;
   padding: 0 !important;
   height: 4.5rem;
+  max-width: 100% !important;
 }
